[Changes 1.2.2]

* Fix display of the OperView SWATCH flags variable. (caf)

* Update default /fset SERVER_NOTICE value to remove extra space. (caf)

* Treat all NOTICEs before registration as local server notices. (caf)

* Add /on NOTICE_GROUP and /fset NOTICE_GROUP analogous to MSG_GROUP. (caf)

* Add configure check for <sys/sockio.h>. (caf)

* Improve /WINDOW DESCRIBE output a little. (caf)

* If we can't create a socket for the first address returned by getaddrinfo(),
  try the other returned addresses. (caf)

* Only show version once with -v option (reported by cpet). (caf)

* Drop group privileges before droppping user privileges when execing. (caf)

* Apply patch from cpet to make autogen.sh prompt to run configure. (caf)

* Improve some messages in /window size (reported by cpet). (caf)

* Improve messages around DCC auto-get / auto-rename / auto-resume. (caf)

* Fix spelling of "receive" in all client output. (caf)

* Ignore DCC ACCEPT if RESUME wasn't requested. (caf)

* Fix /KB so that it kicks-then-bans as intended (reported by profiler). (caf)

* Fix $functioncall() scripting function (reported by |Rain|). (caf)

* Ensure close_server() clears the internal command queues for the right
  server. (caf)

* Remove obsolete AIM plugin. (caf)

* Tighten up the handling of channel WALLs. (caf)

* Don't mangle ANSI sequences in NOTICEs. (caf)

* Use BitchX.kill in all cases for random /KILL messages, and install a
  copy of this file. (caf)

* Fix potential crash in /unban, and change it so that it correctly matches
  the user@ portion of the hostmask. (caf)

* Clean up the build by fixing up the (unsigned char *) / (char *) mismatches
  that the compiler warns about. (caf)

* Fix bxconfigure crashing on very wide terminals (reported by cpet). (caf)

* Remove obsolete Chatnet 310 numeric support (WANT_CHATNET). (caf)

* Rework the lag check to make it simpler and more reliable.  This adds